# lean-lsp-mcp-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  release.sh
lean-project/: Main.lean  NandaLeanDemo.lean  README.md  lake-manifest.json  lakefile.toml
lean-project/NandaLeanDemo/: Basic.lean
src/lean_lsp_mcp/: __init__.py  client_utils.py  file_utils.py  instructions.py  server.py  utils.py
