[project]
name = "lean-lsp-mcp"
version = "0.7.1"
description = "Lean Theorem Prover MCP"
authors = [{name="Oliver Dressler", email="hey@oli.show"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "leanclient==0.1.14",
    "mcp[cli]==1.15.0",
]

[project.urls]
Repository = "https://github.com/oOo0oOo/lean-lsp-mcp"

[project.optional-dependencies]
lint = [
    "ruff>=0.2.0",
]
dev = [
    "ruff>=0.2.0",
]

[tool.setuptools]
packages = ["lean_lsp_mcp"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
lean-lsp-mcp = "lean_lsp_mcp:main"
